2008-10-16  1.11  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-09-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* modules/devtools/testutilities.tcl (useTcllibC): Added code to
	  print the location of the tcllibc used by the testsuite.

	* support/devel/sak/test/run.tcl (::sak::test::run::AbortCause):
	  Tweaked to be more lenient and accept more error messages.

2008-07-08  Andreas Kupries  <andreask@activestate.com>

	* support/installation/modules.tcl: New module 'amazon-s3' with
	  packages 'S3' and 'xsxp', by Darren New. Access to Amazon's
	  Simple Storage Service.

2008-06-30  Andreas Kupries  <andreask@activestate.com>

	* support/installation/actions.tcl (_manfile): Tossed two of the
	  three identical copies of this procedure. Thanks to Stuart
	  Cassoff for noticing and reporting this.

2008-06-20  Andreas Kupries  <andreask@activestate.com>

 	* support/installation/version.tcl: Added code integrated
	  struct::stack's critcl implementation into the build.

2008-05-22  Andreas Kupries  <andreask@activestate.com>

	* support/installation/modules.tcl: Added 'yaml' to the list
	  of official modules.

2008-03-26  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* support/devel/sak/validate/syntax.tcl: Fix problem in pcx scan
	  logic, have to handle unknown commands. Like is done for
	  testsuites.

2008-03-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* support/devel/sak/validate/syntax.tcl: Do not try to check TeX
	  files for Tcl syntax.

	* support/devel/sak/validate/syntax.tcl: New code, syntax checking
	  via tclchecker.
	* support/devel/sak/validate/validate.tcl: Activated new
	  validation module.

	* support/devel/sak/validate/manpages.tcl: Skip tcllibc.
	* support/devel/sak/validate/testsuites.tcl: Skip tcllibc.

	* support/devel/sak/util/feedback.tcl: Flush log lines.

	* sak.tcl (ppackages): Added code to recognize a pragma '@sak